--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Mikelle Duff</title>
   </head>
   <h1>Mikelle Duff</h1>
-  <p>This is where I am going to track my learning. Welcome to my website!</p>
-  <p>My first project is a math times table in Javascript.</p>
+  <body>
+    <p>This is where I am going to track my learning. Welcome to my website!</p>
+    <p>My first project is a math times table in Javascript.</p>
+  </body>
 </html>
