added link to stylesheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Mikelle Duff</title>
+    <link rel="stylesheet" type="text/css" href="custom.css">
   </head>
   <h1>Mikelle Duff</h1>
   <body>
